--- a/android/src/main/res/xml/file_paths.xml
+++ b/android/src/main/res/xml/file_paths.xml
@@ -2,4 +2,5 @@
 <paths>
     <external-path path="Android/data/${applicationId}/" name="files_root" />
     <external-path path="." name="external_storage_root" />
+    <cache-path path="." name="cache_root" />
 </paths>
